@@ -1,3 +1,8 @@
+2011-11-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCopt.c:
+	  Fix broken control and data flow handling (regression tests passing now, exept for bug-895992.c).
+
 2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCopt.c:
